...
// MARK: VARUABKE DECLARATION AND INITIAL CONFIGURATION
    
    private let inputCurrencyTextField: UITextField = {
        let textField = UITextField()
        textField.translatesAutoresizingMaskIntoConstraints = false
        textField.placeholder = "Enter Amount Here"
        textField.accessibilityIdentifier = "InputCurrencyTextField"
        textField.font = UIFont.systemFont(ofSize: 17, weight: .semibold)
        textField.textColor = AppTheme.AppColor.navyBlue.uiColor
        textField.keyboardType = .decimalPad
        textField.layer.borderColor = AppTheme.AppColor.lightGray.uiColor.cgColor
        textField.layer.borderWidth = 1
        textField.layer.cornerRadius = 8
...
    }()
    
    private let outputCurrencyTextField: UITextField = {
        let textField = UITextField()
        textField.translatesAutoresizingMaskIntoConstraints = false
        textField.placeholder = "Converted Amount Here"
        textField.accessibilityIdentifier = "OutputCurrencyTextField"
        textField.isUserInteractionEnabled = false
        textField.font = UIFont.systemFont(ofSize: 17, weight: .semibold)
        textField.textColor = AppTheme.AppColor.suvaGray.uiColor
        textField.layer.borderColor = AppTheme.AppColor.lightGray.uiColor.cgColor
        textField.layer.borderWidth = 1
        textField.layer.cornerRadius = 8
...
    private let inputCurrencyButton: UIButton = {
        let button = UIButton(type: .system)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setTitleColor( AppTheme.AppColor.white.uiColor, for: .normal)
        button.backgroundColor = AppTheme.AppColor.navyBlue.uiColor.withAlphaComponent(0.75)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 15, weight: .semibold)
        button.accessibilityIdentifier = "InputCurrencyButton"
        button.layer.cornerRadius = 8
        
        return button
    }()
    
    private let outputCurrencyButton: UIButton = {
        let button = UIButton(type: .system)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setTitleColor( AppTheme.AppColor.white.uiColor, for: .normal)
        button.backgroundColor = AppTheme.AppColor.navyBlue.uiColor.withAlphaComponent(0.75)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 15, weight: .semibold)
        button.accessibilityIdentifier = "OutputCurrencyButton"
        button.layer.cornerRadius = 8
        
        return button
    }()
    
    private let hStackView1: UIStackView = {
...
    private let currenciesTableView: UITableView = {
        let tableView = UITableView()
        tableView.translatesAutoresizingMaskIntoConstraints = false
        tableView.allowsSelection = false
        tableView.separatorStyle = .singleLine
        tableView.separatorInset = UIEdgeInsets(top: 0, left: 8, bottom: 0, right: 8)
        tableView.accessibilityIdentifier = "CurrenciesTableView"
        tableView.register(CurrencyTableViewCell.self, forCellReuseIdentifier: CurrencyTableViewCell.identifer)
        
        return tableView
    }()
    
    //private var popupView: PopupView?
...
