...
    // MARK: ================================================================================
    
    override func viewDidLoad() {
        super.viewDidLoad()
        prepareView()
        
        self.view.accessibilityIdentifier = "PopupViewController"
    }
}

// MARK: ================================================================================
// MARK: VIEW CONFIGURATION
// MARK: ================================================================================
...
    private func prepareView() {
        
        view.addSubview(tableView)
        tableView.frame = view.bounds
        tableView.delegate = self
        tableView.dataSource = self
        tableView.accessibilityIdentifier = "PopupTableView"
        tableView.separatorInset = UIEdgeInsets(top: 0, left: 8, bottom: 0, right: 8)
        tableView.register(PopupTableViewCell.self, forCellReuseIdentifier: PopupTableViewCell.identifier)
       
    }
    
    func setValue(currencies: [CurrencyModel?]) {
...
